# emhell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.local.ci  ci.sh  default.nix  emhell.cabal  hgdb.cabal
app/: Box.hs  Completion.hs  Main.hs  Options.hs  Selector.hs
emhell/: Main.hs
hgdb/: Main.hs  Options.hs
hocd/: Main.hs
src/: EmHell.hs  Gdb.hs
src/EmHell/: Completion.hs  Options.hs  Parsers.hs  Selector.hs  SigintHandler.hs
src/EmHell/SVD/: Completion.hs  Manipulation.hs  Query.hs  Selector.hs
src/Gdb/: Monad.hs
tests/: IO.hs
