cabal-version:  2.2
name:           hgdb
Synopsis:       Gdb monad and repl
Description:    Gdb monad built around GDB/MI
category:       Embedded
version:        0.1
license:        BSD-3-Clause
license-file:   LICENSE
author:         sorki <srk@48.io>
maintainer:     sorki <srk@48.io>
stability:      provisional
homepage:       https://github.com/srk/hgdb
bug-reports:    https://github.com/srk/hgdb/issues
copyright:      (c) 2020 sorki <srk@48.io>
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

source-repository head
  type: git
  location: git://github.com/DistRap/hgdb.git

library
  build-depends:      base        >= 4 && < 5
                    , hgdbmi
  exposed-modules:    EmHell
--                    , EmHell.Completion

  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010

-- to ghci use cabal new-repl exe:hgdb
executable hgdb
  hs-source-dirs:     app
  main-is:            Main.hs
  other-modules:      Completion
                      Options
                      Selector

  build-depends:      base        >= 4 && < 5
                    , attoparsec
                    , bytestring
                    , hgdb
                    , hgdbmi
                    , boxes
                    , repline >= 0.4.0.0 && < 0.5
                    , haskeline
                    , data-default-class
                    , data-svd
                    , directory
                    , optparse-applicative
                    , transformers
                    , unix
