cabal-version:  2.2
name:           emhell
Synopsis:       Embedded shell
Description:    Tooling for register exploration using SVD files and GDB-MI or OpenOCD backends
category:       Embedded
version:        0.1
license:        BSD-3-Clause
license-file:   LICENSE
author:         sorki <srk@48.io>
maintainer:     sorki <srk@48.io>
stability:      provisional
homepage:       https://github.com/srk/emhell
bug-reports:    https://github.com/srk/emhell/issues
copyright:      (c) 2020 sorki <srk@48.io>
build-type:     Simple
extra-source-files:
    LICENSE
    README.md

extra-doc-files:
    CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/DistRap/emhell.git

flag hgdb
  default:
    False
  description:
    Build hgdb

library
  build-depends:      base >= 4 && < 5
                    , attoparsec
                    , data-svd
                    , haskeline
                    , optparse-applicative
                    , text
                    , transformers
                    , unix
  exposed-modules:    EmHell
                    , EmHell.Options
                    , EmHell.Parsers
                    , EmHell.SigintHandler
                    , EmHell.SVD.Completion
                    , EmHell.SVD.Selector

  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010

-- to ghci use cabal new-repl exe:hgdb
executable hgdb
  if !flag(hgdb)
    buildable: False
  ghc-options:        -Wall
  hs-source-dirs:     hgdb
  main-is:            Main.hs
  other-modules:      Options

  build-depends:      base >= 4 && < 5
                    , emhell
                    , hgdbmi
                    , repline >= 0.4.0.0 && < 0.5
                    , data-default-class
                    , data-svd
                    , directory
                    , optparse-applicative
                    , transformers
